Fix: fix Collectors.toList at PerguntaService